--- a/main.css
+++ b/main.css
@@ -4,20 +4,45 @@
 	padding: 0px;
 	box-sizing: border-box;
 }
+
+@keyframes header {
+    from {top: 0;}
+    to {top: 20%;}
+}
 header {
+	order: 1;
   margin: 0px;
-  background-color: black;
+  background-color:rgba(6, 21, 44, 1);
   padding: 20px;
-  background-image: url(./tic-tac.png);
-  color: black;
+  color: white;
+	animation-name: header;
+	animation-duration: 1s;
+}
+
+@keyframes h1 {
+    from {left: 0;}
+    to {left: 20%;}
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	font-size: 14px;
+	padding: 4px;
+	color: white;
+	background-color: black;
 }
 h1,h2 {
+	order: 4;
   margin-top: 10px;
-  color: black;
+  color: white;
+	animation-name: h1;
+	animation-duration: 1s;
 }
 body, html {
   /*background-image: url(./tic-tac.png);*/
-  background-color: #FFFAF0;
+	order: 2;
+  background-color: rgba(255,255,255,0.1);
   margin: 0px;
   font-family: 'lato';
   font-size: 20px;
@@ -25,6 +50,25 @@ body, html {
   text-align: center;
 	height: 100%;
 }
+@keyframes features {
+    from {left: 0px;}
+    to {right: 51%;}
+}
+@keyframes tutorial {
+    from {left: 0;}
+    to {left: 37%;}
+}
+
+@keyframes section {
+    from {top: 0;}
+    to {top: 25%;}
+}
+
+@keyframes sectionOut {
+    from {left: 40%;}
+    to {left: 100%;}
+}
+
 button,#submit,#regSubmit {
   border: 1px solid black;
   background-color: white;
@@ -44,6 +88,8 @@ section {
   position: fixed;
   left: 40%;
   top: 25%;
+	animation-name: section;
+	animation-duration: 0.8s;
 }
 #registerSection {
 
@@ -55,7 +101,7 @@ section {
     height: 50%;
     position: fixed;
     left: 40%;
-    top: 25%;
+
 
 }
 #tutorial {
@@ -70,6 +116,8 @@ section {
     color: white;
     font-size: 15px;
     padding: 7px;
+		animation-name: tutorial;
+		animation-duration: 2s;
 }
 label {
   color: white;
@@ -79,7 +127,11 @@ label {
 input {
   margin: 7px;
 }
+#loginForm {
 
+	color: #666666;
+	margin: 0px;
+}
 form {
 	color: #666666;
 	margin: 0px;
@@ -91,6 +143,8 @@ form {
   top: 56.5%;
   padding: 7px;
   left: 51%;
+	animation-name: features;
+	animation-duration: 2s;
 }
 #firstname,#lastname,#username,#password,#email,#password {
   color: black;
