room semi-implementation

--- a/game.css
+++ b/game.css
@@ -29,9 +29,17 @@
   margin: 5px;
 }
 
+#game-body{
+  display: none;
+}
+#waiting-message{
+  display: none;
+}
+
 body{
   background-color: #000;
 }
+
 
 nav{
   width:100%;
