--- a/main.css
+++ b/main.css
@@ -75,6 +75,8 @@ button,#submit,#regSubmit {
   font-size: 14px;
   margin-top: 30px;
   margin-left: 10px;
+  position: relative;
+  left: 100px;
   padding: 10px;
   color: black;
 }
@@ -102,7 +104,7 @@ section {
 #tutorial {
     position: fixed;
     left: 37%;
-    top:48%;
+    top: 52%;
     text-decoration: none;
     color: initial;
     border: 1px solid black;
@@ -135,7 +137,7 @@ form {
   background-color: black;
   color: white;
   position: fixed;
-  top: 56.5%;
+  top: 61%;
   padding: 7px;
   left: 51%;
 	animation-name: features;
@@ -147,6 +149,8 @@ form {
 #register {
   text-decoration: none;
   color: initial;
+  position: relative;
+  top: 20px;
   border: 1px solid black;
   background-color: white;
   font-size: 14px;
@@ -171,7 +175,6 @@ form {
 		    transition: 0.5s;
 		    padding-top: 60px;
 }
-
 
 .sidenav p {
 		text-align: left;
